add more project

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="index.html"><i class="fa-solid fa-house"></i></a></li>
                     <li><a href="about.html"><i class="fa-solid fa-user"></i></a></li>
                     <li><a href="education.html"><i class="fa-solid fa-user-graduate"></i></a></li>
-                     <li><a href="skill.html"><i class="fa-solid fa-lightbulb"></i></a></li>
+                    <li><a href="skill.html"><i class="fa-solid fa-lightbulb"></i></a></li>
                     <li><a href="project.html"><i class="fa-solid fa-gears"></i></a></li>
                     <li><a href="contact.html"><i class="fa-solid fa-envelope"></i></a></li>
 
@@ -59,11 +59,11 @@
             </div>
         </section>
         <hr>
-          <div class="project-box">
-                <h1><i class="fa-solid fa-gears"></i> Project</h1>
-            </div>
+        <div class="project-box">
+            <h1><i class="fa-solid fa-gears"></i> Project</h1>
+        </div>
         <section class="secondSection">
-             <h1>My Projects</h1>
+            <h1>My Projects</h1>
             <div class="container">
 
 
@@ -74,9 +74,10 @@
                         target="_blank">View Code</a>
                 </div>
                 <div class="project-card">
-                    <h2>Calculator</h2>
-                    <p>basic arithmetic operations and shows my understanding of DOM manipulation.</p>
-                    <a href="https://github.com/kanchankahar23/BASIC-WEB-PROJECT/tree/main/basic-calculator"
+                    <h2>Personal Portfolio Website</h2>
+                    <p>A deploy personal portfolio website designed and developed using HTML,CSS, and JavaScript
+                     </p>
+                    <a href="https://github.com/kanchankahar23/PORTFOLIO-website"
                         target="_blank">View Code</a>
                 </div>
                 <div class="project-card">
@@ -105,7 +106,8 @@
             <div class="footer-right">
                 <ul>
                     <li><a href="mailto:kaharkanchan884@gmail.com" title="Email">📧Email:kaharkanchan@gmail.com</a></li>
-                    <li> <a href="https://www.linkedin.com/in/kanchan-kahar-096903319" title="LinkedIn" target="_blank">🔗kanchan-kahar</a></li>
+                    <li> <a href="https://www.linkedin.com/in/kanchan-kahar-096903319" title="LinkedIn"
+                            target="_blank">🔗kanchan-kahar</a></li>
                     <li> <a href="https://github.com" title="GitHub" target="_blank">🐱kanchankahar23</a></li>
                 </ul>
             </div>
