--- a/project.html
+++ b/project.html
@@ -109,13 +109,45 @@
                 </div>
             </div>
             <div class="project-card">
+                <h2>Personal Portfolio Website</h2>
+                <div>
+                    <p>A personal portfolio website designed</p>
+                    <p> and developed using HTML,CSS, and JavaScript</p>
+                       <p> to showcase my skills, projects, and contact details.</p>
+                       <p> The site features a clean and responsive layout.</p>
+                       <p>I use to create efficient, responsive, and user-friendly web applications. </p>
+                </div>
+                <a href="https://github.com/kanchankahar23/PORTFOLIO-website" target="_blank">View Code</a>
+                <div class="techno-box">
+                    <div class="techno">HTML</div>
+                    <div class="techno">CSS</div>
+                    <div class="techno">JS</div>
+
+                </div>
+            </div>
+            <div class="project-card">
+                <h2>Quiz-Bash</h2>
+                <div>
+                    <p>A dynamic and responsive Quiz App built using HTML,CSS, and JavaScript.</p>
+                    <p> It allows users to:</p>
+                    <p>Answer multiple-choice questions (MCQs) Navigate through questions View their final score at the
+                        end The app is lightweight, fast, and fully responsive.</p>
+                </div>
+                <a href="https://github.com/kanchankahar23/QUIZ-App" target="_blank">View Code</a>
+                <div class="techno-box">
+                    <div class="techno">HTML</div>
+                    <div class="techno">CSS</div>
+                    <div class="techno">JS</div>
+
+                </div>
+            </div>
+            <div class="project-card">
                 <h2>Rock Paper Scissors</h2>
                 <P>A fun and interactive browser-based game developed using HTML, CSS, and JavaScript. The user plays
                     against the computer by selecting rock, paper, or scissors. The game generates a random choice for
                 </P>
                 <p>the computer and determines the winner based on classic rules. </P>
-                <a href="https://github.com/kanchankahar23/Rock-Peper-Scissors-game"
-                    target="_blank">View Code</a>
+                <a href="https://github.com/kanchankahar23/Rock-Peper-Scissors-game" target="_blank">View Code</a>
                 <div class="techno-box">
                     <div class="techno">HTML</div>
                     <div class="techno">CSS</div>
