add more  project

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 
 
                 <div class="project-card">
-                    <h2>To do list</h2>
-                    <p>A full-stack task manager app to manage daily tasks with user login.</p>
-                    <a href="https://github.com/kanchankahar23/BASIC-WEB-PROJECT/tree/main/TO%20DO%20LIST"
+                    <h2>Jokeify</h2>
+                    <p>Jokeify is a fun and interactive web app that fetches random jokes from an open API.</p>
+                    <a href="https://github.com/kanchankahar23/Jokeify"
                         target="_blank">View Code</a>
                 </div>
                 <div class="project-card">
