--- a/project.html
+++ b/project.html
@@ -64,6 +64,9 @@
         border-radius: 6px;
         text-align: center;
     }
+    #Jokeify .techno{
+        width: 70px;
+    }
 </style>
 
 <body>
@@ -89,84 +92,104 @@
         </div>
         <h1>Projects</h1>
         <div class="container">
-
-
-            <div class="project-card">
-                <h2>To do list</h2>
-                <div>
-                    <p>A responsive and interactive task management web application built using HTML, CSS, and</p>
-                    <P> JavaScript. It allows users to add, edit, delete, and mark tasks as completed. The app uses</P>
-                    <P>localStorage to save tasks even after the browser is closed, providing a smooth and persistent
-                        user experience. </p>
-                </div>
-                <a href="https://github.com/kanchankahar23/BASIC-WEB-PROJECT/tree/main/TO%20DO%20LIST"
-                    target="_blank">View Code</a>
+            <div class="project-card" id="Jokeify">
+                <h2>Jokeify </h2>
+                <p>Jokeify is a fun and interactive web app that fetches random jokes from an open API and displays them
+                    in a user-friendly interface. It’s a great example of working with real-time data using </p><p>the Fetch
+                    API and shows clean UI design practices. </p>
+                <a href="https://github.com/kanchankahar23/Jokeify" target="_blank">View Code</a>
                 <div class="techno-box">
                     <div class="techno">HTML</div>
                     <div class="techno">CSS</div>
                     <div class="techno">JS</div>
+                    <div class="techno">Fetch Api</div>
+
 
                 </div>
             </div>
-            <div class="project-card">
-                <h2>Personal Portfolio Website</h2>
-                <div>
-                    <p>A personal portfolio website designed</p>
-                    <p> and developed using HTML,CSS, and JavaScript</p>
-                       <p> to showcase my skills, projects, and contact details.</p>
-                       <p> The site features a clean and responsive layout.</p>
-                       <p>I use to create efficient, responsive, and user-friendly web applications. </p>
-                </div>
-                <a href="https://github.com/kanchankahar23/PORTFOLIO-website" target="_blank">View Code</a>
-                <div class="techno-box">
-                    <div class="techno">HTML</div>
-                    <div class="techno">CSS</div>
-                    <div class="techno">JS</div>
+                <div class="project-card">
+                    <h2>Personal Portfolio Website</h2>
+                    <div>
+                        <p>A personal portfolio website designed</p>
+                        <p> and developed using HTML,CSS, and JavaScript</p>
+                        <p> to showcase my skills, projects, and contact details.</p>
+                        <p> The site features a clean and responsive layout.</p>
+                        <p>I use to create efficient, responsive, and user-friendly web applications. </p>
+                    </div>
+                    <a href="https://github.com/kanchankahar23/PORTFOLIO-website" target="_blank">View Code</a>
+                    <div class="techno-box">
+                        <div class="techno">HTML</div>
+                        <div class="techno">CSS</div>
+                        <div class="techno">JS</div>
 
+                    </div>
                 </div>
-            </div>
-            <div class="project-card">
-                <h2>Quiz-Bash</h2>
-                <div>
-                    <p>A dynamic and responsive Quiz App built using HTML,CSS, and JavaScript.</p>
-                    <p> It allows users to:</p>
-                    <p>Answer multiple-choice questions (MCQs) Navigate through questions View their final score at the
-                        end The app is lightweight, fast, and fully responsive.</p>
-                </div>
-                <a href="https://github.com/kanchankahar23/QUIZ-App" target="_blank">View Code</a>
-                <div class="techno-box">
-                    <div class="techno">HTML</div>
-                    <div class="techno">CSS</div>
-                    <div class="techno">JS</div>
+                <div class="project-card">
+                    <h2>Quiz-Bash</h2>
+                    <div>
+                        <p>A dynamic and responsive Quiz App built using HTML,CSS, and JavaScript.</p>
+                        <p> It allows users to:</p>
+                        <p>Answer multiple-choice questions (MCQs) Navigate through questions View their final score at
+                            the
+                            end The app is lightweight, fast, and fully responsive.</p>
+                    </div>
+                    <a href="https://github.com/kanchankahar23/QUIZ-App" target="_blank">View Code</a>
+                    <div class="techno-box">
+                        <div class="techno">HTML</div>
+                        <div class="techno">CSS</div>
+                        <div class="techno">JS</div>
 
+                    </div>
                 </div>
-            </div>
-            <div class="project-card">
-                <h2>Rock Paper Scissors</h2>
-                <P>A fun and interactive browser-based game developed using HTML, CSS, and JavaScript. The user plays
-                    against the computer by selecting rock, paper, or scissors. The game generates a random choice for
-                </P>
-                <p>the computer and determines the winner based on classic rules. </P>
-                <a href="https://github.com/kanchankahar23/Rock-Peper-Scissors-game" target="_blank">View Code</a>
-                <div class="techno-box">
-                    <div class="techno">HTML</div>
-                    <div class="techno">CSS</div>
-                    <div class="techno">JS</div>
+                <div class="project-card">
+                    <h2>To do list</h2>
+                    <div>
+                        <p>A responsive and interactive task management web application built using HTML, CSS, and</p>
+                        <P> JavaScript. It allows users to add, edit, delete, and mark tasks as completed. The app uses
+                        </P>
+                        <P>localStorage to save tasks even after the browser is closed, providing a smooth and
+                            persistent
+                            user experience. </p>
+                    </div>
+                    <a href="https://github.com/kanchankahar23/BASIC-WEB-PROJECT/tree/main/TO%20DO%20LIST"
+                        target="_blank">View Code</a>
+                    <div class="techno-box">
+                        <div class="techno">HTML</div>
+                        <div class="techno">CSS</div>
+                        <div class="techno">JS</div>
 
+                    </div>
                 </div>
-            </div>
-            <div class="project-card">
-                <h2>Tic-Tac-Toe game </h2>
-                <p>A classic 2-player Tic Tac Toe game built using HTML, CSS, and JavaScript. Players take turns marking
-                    X or O in a 3×3 grid, with the game detecting wins, draws, and providing instant feedback.It
-                    features a clean UI and responsive design. This project demonstrates my understanding of game
-                    logic, </p>
-                <a href="https://github.com/kanchankahar23/tic-tac-toe-org" target="_blank">View Code</a>
-                <div class="techno-box">
-                    <div class="techno">HTML</div>
-                    <div class="techno">CSS</div>
-                    <div class="techno">JS</div>
+                <div class="project-card">
+                    <h2>Rock Paper Scissors</h2>
+                    <P>A fun and interactive browser-based game developed using HTML, CSS, and JavaScript. The user
+                        plays
+                        against the computer by selecting rock, paper, or scissors. The game generates a random choice
+                        for
+                    </P>
+                    <p>the computer and determines the winner based on classic rules. </P>
+                    <a href="https://github.com/kanchankahar23/Rock-Peper-Scissors-game" target="_blank">View Code</a>
+                    <div class="techno-box">
+                        <div class="techno">HTML</div>
+                        <div class="techno">CSS</div>
+                        <div class="techno">JS</div>
 
+                    </div>
                 </div>
-            </div>
+
+                <div class="project-card">
+                    <h2>Tic-Tac-Toe game </h2>
+                    <p>A classic 2-player Tic Tac Toe game built using HTML, CSS, and JavaScript. Players take turns
+                        marking
+                        X or O in a 3×3 grid, with the game detecting wins, draws, and providing instant feedback.It
+                        features a clean UI and responsive design. This project demonstrates my understanding of game
+                        logic, </p>
+                    <a href="https://github.com/kanchankahar23/tic-tac-toe-org" target="_blank">View Code</a>
+                    <div class="techno-box">
+                        <div class="techno">HTML</div>
+                        <div class="techno">CSS</div>
+                        <div class="techno">JS</div>
+
+                    </div>
+                </div>
     </main>
